# NotelyCapture

./: .gitattributes  .gitignore  .weblate  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  upstream-sync.sh
.github/: FUNDING.yml
.github/workflows/: build-android.yml  claude-code-review.yml  claude.yml  generate-changelog.yml  github-release.yml  release-signed.yml
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
backlog/: config.yml
backlog/archive/tasks/: task-001 - Add-pause-resume-functionality-to-AudioRecorder-interface.md
backlog/tasks/: task-001 - Add-pause-resume-functionality-to-AudioRecorder-interface.md  task-002 - Implement-variable-speed-playback-for-audio-notes.md  task-003 - Add-real-time-amplitude-visualization-during-recording.md  task-004 - Implement-quick-capture-functionality-for-Android.md  task-005 - Implement-dynamic-theming-system-with-Material-3.md  task-006 - Redesign-note-list-with-card-based-layout.md  task-007 - Create-immersive-recording-screen-UI.md  task-008 - Improve-note-detail-screen-readability-and-editing.md  task-009 - Create-AI-settings-screen-with-secure-API-key-management.md  task-010 - Implement-OpenAI-integration-module-with-Ktor.md  task-011 - Add-transcription-and-summarization-workflow-to-note-detail-screen.md  task-012 - Implement-interactive-transcripts-with-audio-synchronization.md  task-013 - Add-quick-record-shortcut-for-streamlined-audio-capture.md  task-014 - Add-support-for-16KB-page-sizes-on-Android.md  task-015 - Migrate-deprecated-Android-source-directory-structure.md  task-016 - Fix-post-recording-UI-freeze-by-moving-LibWhisper-initialization-to-background-thread.md  task-017 - Fix-threading-issue-causing-IllegalStateException-in-quick-record-flow.md  task-018 - Fix-native-resource-leak-in-transcription-causing-'A-resource-failed-to-call-close'-warning.md  task-019 - Implement-Microsoft-inspired-unified-action-buttons-system.md  task-020 - Complete-Material-3-Component-Migration.md  task-021 - Implement-Unified-Layout-System-with-Shared-Components.md  task-022 - Implement-Motion-Tokens-and-Animation-System.md  task-023 - Optimize-Note-List-Screen-with-Material-3-Expressive-Design.md  task-024 - Enhance-Note-Detail-Screen-with-Advanced-M3-Features.md  task-025 - Transform-Recording-Screen-with-Expressive-Visual-Design.md  task-026 - Implement-Apple-Design-Excellence-Integration.md  task-027 - Create-Design-System-Documentation-and-Testing.md  task-028 - Replace-LargeFloatingActionButton-with-Extended-FAB-featuring-Voice-functionality.md  task-029 - Migrate-from-Material-Icons-to-Material-Symbols-font-based-implementation.md  task-030 - Fix-UI-UX-inconsistencies-in-home-screen-and-pinned-section-styling.md  task-031 - Optimize-LazyVerticalStaggeredGrid-Performance.md  task-032 - Implement-Compose-Performance-Best-Practices.md  task-033 - Memory-Management-Improvements.md  task-034 - Streamline-Data-Flow-Architecture.md  task-035 - Background-Processing-Implementation.md  task-036 - Implement-Pagination-Virtual-Scrolling.md  task-037 - Advanced-Caching-Strategy.md  task-038 - Improve-home-page-scrolling-and-UI-enhancements.md  task-039 - Optimize-note-card-display-layout-for-Home-Page-and-Calendar.md  task-040 - Rich-Text-Editor-Toolbar-Critical-Issues-Analysis.md  (+1 more)
core/audio/: build.gradle.kts
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
iosApp/: Podfile
iosApp/iosApp/: AppView.swift  ContentView.swift  Info.plist  SceneDelegate.swift  Theming.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Extensions/: Extensions.swift
iosApp/iosApp/Info/: InfoScreenController.swift
iosApp/iosApp/Settings/: SettingScreenController.swift
iosApp/iosApp/list/: NoteListScreen.swift  NoteListScreenView.swift
iosApp/whisper.xcframework/: Info.plist
lib/: build.gradle
lib/src/main/jni/whisper/: CMakeLists.txt  jni.c
models/: build.gradle
shared/: build.gradle.kts
shared/src/androidMain/: AndroidManifest.xml
shared/src/nativeInterop/cinterop/: whisper.def
(+333 files in other folders)
